# aloware-report-scripts

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  STATUS.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
agent-status-report/: SKILL.md  build_email.py  html_template.md  query_report.py  run_report.py
docs/: DATA_CONTRACT.md
