[project]
name = "aloware-report-scripts"
version = "1.3.0"
description = "Python renderer scripts for Aloware Cowork report skills"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "B",    # flake8-bugbear
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",  # line too long — HTML generation produces long lines by design
]
